--- a/style.css
+++ b/style.css
@@ -2,7 +2,12 @@
     margin:0;
     padding:0;
     box-sizing: border-box;
-    background-color: #000000;
+    /* background-color: #000000; */
+    /* background-color: white; */
+}
+
+.navbar{
+    background-color: black;
 }
 
 .nav-link{
@@ -19,7 +24,4 @@
 }
 .Sign{
     margin-left: 1rem;
-}
-
-.crausel{
 }
